--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Teste tecnico para desenvolvedor na Escribo",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "kennedfer",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mocha": "^10.2.0"
+  }
 }
