--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Teste tecnico para desenvolvedor na Escribo",
   "main": "app.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "cls && node input"
   },
   "author": "kennedfer",
   "license": "ISC",
